# wingspan-optimization-suite

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  quick-compile.py
include/: plugin-registration.h  wingspan-constant-folder.h  wingspan-constants.h  wingspan-dce.h  wingspan-find-constant-operations.h  wingspan-find-identities.h  wingspan-inline.h  wingspan-licm.h  wingspan-mem2reg.h  wingspan-optimization-analysis.h  wingspan-print-opt-analysis.h  wingspan-should-be-inlined.h  wingspan-simplify-cfg.h  wingspan-strength-reducer.h
lib/: CMakeLists.txt  plugin-registration.cpp  wingspan-constant-folder.cpp  wingspan-dce.cpp  wingspan-find-constant-operations.cpp  wingspan-find-identities.cpp  wingspan-inline.cpp  wingspan-licm.cpp  wingspan-mem2reg.cpp  wingspan-optimization-analysis.cpp  wingspan-print-opt-analysis.cpp  wingspan-should-be-inlined.cpp  wingspan-simplify-cfg.cpp  wingspan-strength-reducer.cpp  wingspan.def
